--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Widows -- Juvenile fiction'
 - !lcsh 'Devotion -- Juvenile fiction'
 - !lcsh 'Recluses -- Juvenile fiction'
+- GITenberg
 title: The Drummer's Coat
 url: http://www.gutenberg.org/ebooks/19801
